--- a/overlay/OPlusFrameworksResTarget/res/values/dimens.xml
+++ b/overlay/OPlusFrameworksResTarget/res/values/dimens.xml
@@ -8,11 +8,11 @@
     <!-- Height of the status bar.
          Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
          -->
-    <dimen name="status_bar_height_default">28dp</dimen>
-    <dimen name="status_bar_height_portrait">123px</dimen>
-    <dimen name="status_bar_height_landscape">28dp</dimen>
+    <dimen name="status_bar_height_portrait">108.5px</dimen>
+    <dimen name="status_bar_height_landscape">108.5px</dimen>
 
-    <!-- Default radius of the software rounded corners. -->
-    <dimen name="rounded_corner_radius">8dp</dimen>
+    <!-- Rounded corners --> 
+    <dimen name="rounded_corner_radius_top">90px</dimen>
+    <dimen name="rounded_corner_radius_bottom">90px</dimen>
 
 </resources>
